<resources>
    <string name="app_name">Focus</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Virendra Nawkar</string>
    <string name="nav_header_subtitle">virendranawkar1@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_Youtube_videos">Youtube Videos</string>
    <string name="menu_To_do_list">To Do List</string>
    <string name="menu_timer">Timer</string>
    <string name="menu_music">Music</string>
</resources>